# agentz

./: .env.example  .gitignore  README.md  agent_factory.py  config.py  input_handler.py  main.py  mcp.json  output_formatter.py  pyproject.toml  server.py  test_tool_events.py
ai/: Planning-Design-优化建议.md  Planning-Design-使用说明.md  Planning-Design-分析与方案.md  Planning-Design-开发计划.md  架构概览.md  项目功能说明.md
commands/: builtin_commands.py
models/: deepseek.py  ollama_qwen.py  planning.py  qwen.py
planning/: __init__.py  aggregator.py  context_helper.py  orchestrator.py  planner.py  router.py  specialized_agents.py
prompts/: planning_prompts.py  prompt.py
tests/: test_planning.py  test_skills_toolset.py
tools/: coder.py  directory_tools.py  file_writer.py  mcp_loader.py  mysql_mcp.py  skills_toolset.py  time_tools.py  tools_registry.py  weather_tools.py  web_search.py  web_search_mcp.py
utils/: session.py
